Cleanup UC16: State with URL Search Integration